Change "renegade" back to "paragon".

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -178,8 +178,8 @@ block.prog-mats-bomber-rocket.description = A [gold]rocket[] used by [gold]arbal
 ## Missile
 block.prog-mats-artemis.name = [red]Artemis
 block.prog-mats-artemis.description = Launches long-range [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
-block.prog-mats-renegade.name = [red]Renegade
-block.prog-mats-renegade.description = Launches long-range nuclear [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a very large minimum distance.
+block.prog-mats-paragon.name = [red]Paragon
+block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
@@ -193,9 +193,9 @@ block.prog-mats-basic-nuke.name = Basic Nuke
 block.prog-mats-basic-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on impact, dealing a ton of splash damage.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]renegade[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage.
+block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage.
 block.prog-mats-sandbox-nuke.name = Sandbox Nuke
-block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]renegade[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
+block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
