Move sentries to Erekir
No sprite changes in this commit, they need a complete resprite as well as being switched over to the vanilla-based payload turret code.

+ Remove dash sentry
+ Remove bomber rocket

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -150,16 +150,14 @@ block.prog-mats-dissonance.name = Dissonance
 block.prog-mats-dissonance.description = Damages and destroys enemy units in a field.
 
 ## bUiLdIn A sEnTrY
-block.prog-mats-tinker.name = [gold]Sergeant
-block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
-block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
+block.prog-mats-sergeant.name = [gold]Sergeant
+block.prog-mats-sergeant.description = Launches strong sentry units that expire after a duration.
+block.prog-mats-sergeant.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
 block.prog-mats-basic-sentry.description = A rapid fire sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 block.prog-mats-strike-sentry.name = Missile Sentry
 block.prog-mats-strike-sentry.description = A missile-launching sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
-block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = A speedy charging sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 
 ## Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
@@ -172,8 +170,6 @@ block.prog-mats-basic-rocket.name = Basic Rocket
 block.prog-mats-basic-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage.
 block.prog-mats-incendiary-rocket.name = Incendiary Rocket
 block.prog-mats-incendiary-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage and causing fire.
-block.prog-mats-bomber-rocket.name = Bomber Rocket
-block.prog-mats-bomber-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, drops bombs behind it that deal damage.
 
 ## Missile
 block.prog-mats-artemis.name = [red]Artemis
@@ -328,9 +324,6 @@ unit.prog-mats-barrage.name = Barrage
 unit.prog-mats-barrage.description = Barrages enemies with homing shots. Does not move. Expires after a short lifetime.
 unit.prog-mats-downpour.name = Downpour
 unit.prog-mats-downpour.description = Fire smalls homing missiles at enemies. Does not move. Expires after a short lifetime.
-unit.prog-mats-rapier.name = Rapier
-unit.prog-mats-rapier.description = Dashes at enemies with a piercing laser. Technically does not move. Expires after a short lifetime.
-unit.prog-mats-rapier.details = Featuring the very original idea of negative recoil.
 
 unit.prog-mats-small-flare.name = Small Signal Flare
 unit.prog-mats-small-flare.description = A small signal flare made of silicon. Fired by allures to attract enemy fire.
@@ -489,7 +482,7 @@ mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (Eruptor sprite + Masquerade
 mod.prog-mats-contributor.1 = [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)
 mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (Missile turret sprites, new icon)
 mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (Luminocity damage ramping)
-mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Tinker sprites)
+mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Sergeant sprites)
 mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
 mod.prog-mats-contributor.6 = [#FCC21B]Memedustry[] (Incision sprite)
 mod.prog-mats-contributor.7 = [#FCC21B]BlueWolf[] (Modular Turret bases and Rebound sprites)
