I have learned of the existence of custom stats

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -376,22 +376,21 @@ stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
 
 stat.pm-static-power = {0} power units/second per link
 
+stat.pm-recipes = [lightgray]Recipes
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
 stat.pm-powersecondblock = {0}% power requirement of overdrived blocks
 
 stat.pm-point-defence-pierce = {0}x pierce
 
-stat.pm-fuel = [lightgray]Fuel:
+stat.pm-fuel = [lightgray]Fuel
 stat.pm-fuel.input = [stat]{0}[lightgray] added per item
 stat.pm-fuel.use = [stat]{0}[lightgray] used per craft
 stat.pm-fuel.capacity = [stat]{0}[lightgray] capacity
 ### The extra space is intentional
 stat.pm-fuel.affinity = [stat]Affinities: 
 
-stat.pm-products = Products
-
-bullet.pm-sword-speed = [stat]{0}[lightgray] speed
+stat.pm-mounts = [lightgray]Mounts
 
 bullet.pm-crit-chance = [stat]{0}%[lightgray] crit chance
 bullet.pm-crit-multiplier = [stat]{0}x[lightgray] crit damage multiplier
