Resprite sentry sprites
+ Fix missile shadow scaling
+ Re-add paragon build cost

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -156,8 +156,8 @@ block.prog-mats-sergeant.details = Original sprite by Kapzduke. Slighly edited b
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
 block.prog-mats-basic-sentry.description = A rapid fire sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
-block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = A missile-launching sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
+block.prog-mats-missile-sentry.name = Missile Sentry
+block.prog-mats-missile-sentry.description = A missile-launching sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 
 ## Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
@@ -372,7 +372,8 @@ bar.pm-craft-speed = Craft Speed: {0}%
 
 bar.pm-totalboost = Total Boost: +{0}%
 
-stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
+stat.pm-sentry = [lightgray]Sentry
+stat.pm-sentry-lifetime = [lightgray]Lifetime
 
 stat.pm-static-power = {0} power units/second per link
 
