--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -189,7 +189,7 @@ block.prog-mats-basic-nuke.name = Basic Nuke
 block.prog-mats-basic-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on impact, dealing a ton of splash damage.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage.
+block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage. Slightly homes in on targets.
 block.prog-mats-sandbox-nuke.name = Sandbox Nuke
 block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
 
