--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -53,7 +53,7 @@ block.prog-mats-igneous-pillar.description = Explodes after a short delay. Spawn
 
 ## Blackhole
 block.prog-mats-blackhole.name = [purple]Kugelblitz
-block.prog-mats-blackhole.description = Fires small black holes that suck in units and bullets.\n[red]WARNING: Black holes coming in contact of those of another team will cause a massive destructive cataclysm.
+block.prog-mats-blackhole.description = Fires small black holes that suck in units and bullets.
 block.prog-mats-blackhole.details = Sprite based off of a sprite provided by Goober.
 
 ## Popeshadow
