About time I updated the bundles
+ Filled in missing entries
+ Removed old entries
+ Reordered turret bundles

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -76,7 +76,7 @@ block.prog-mats-attraction.description = Fires magnets that pull themselves towa
 
 ## Anxiety
 block.prog-mats-sentinel.name = [sky]Sentinel
-block.prog-mats-sentinel.description = Fires powerful explosive laser bolts over long distances.
+block.prog-mats-sentinel.description = Fires powerful explosive laser bolts at ground targets over long distances.
 
 ## Sword
 block.prog-mats-dance.name = [crimson]Dance
@@ -88,66 +88,32 @@ block.prog-mats-ball.description = Controls large flying swords to slice enemies
 block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.\nSword sprite by ThirstyBoi.
 unit.prog-mats-ball-sword.name = [crimson]Masquerade Sword
 
-## Anime Sweep Laser
-block.prog-mats-incision.name = Incision
-block.prog-mats-incision.description = Draws lasers across the floor that explode after a short delay.
-block.prog-mats-incision.details = Sprite by Memedustry
-block.prog-mats-fissure.name = Fissure
-block.prog-mats-fissure.description = Splits space-time to deal heavy damage to enemies.
-block.prog-mats-fissure.details = I'm gonna assume you're surprised that this thing is small and doesn't actually deal a lot of damage.
-
-## Modular Turret
-block.prog-mats-council.name = Council
-block.prog-mats-council.description = Small modular turret base. Contains mounts for multiple modules.
-block.prog-mats-council.details = Sprite by BlueWolf
-block.prog-mats-congress.name = Congress
-block.prog-mats-congress.description = Large modular turret base. Contains mounts for many modules.
-block.prog-mats-congress.details = Sprite by BlueWolf
-block.prog-mats-pantheon.name = Pantheon
-block.prog-mats-pantheon.description = Massive modular turret base. Contains mounts for an army of modules.
-block.prog-mats-pantheon.details = Sprite by BlueWolf
-### Modules (Small)
-block.prog-mats-shrapnel.name = Shrapnel
-block.prog-mats-shrapnel.description = Fires small shotgun blasts at enemies.
+## Laser pointer go brrr
 block.prog-mats-pinpoint.name = Pinpoint
-block.prog-mats-pinpoint.description = Fires a spark at enemy units, placing a target on them that makes them take more damage.
-block.prog-mats-froth.name = Froth
-block.prog-mats-froth.description = Fires liquid at enemies. Automatically extinguishes fires when supplied with water.
-block.prog-mats-bifurcation.name = Bifurcation
-block.prog-mats-bifurcation.description = Fires pairs of lightning arcs at ground enemies.
-block.prog-mats-iris.name = Iris
-block.prog-mats-iris.description = Fires seeking orbs at enemies.
-block.prog-mats-bandage.name = Bandage
-block.prog-mats-bandage.description = Repairs the modular turret base over time
-block.prog-mats-mini-overdrive.name = Overclocker
-block.prog-mats-mini-overdrive.description = Increases the speed of other modules on the same base.
-### Modules (Medium)
-block.prog-mats-blunderbuss.name = Blunderbuss
-block.prog-mats-blunderbuss.description = Fires shotgun blasts at enemies. Can crit for extra damage.
-block.prog-mats-airburst.name = Airburst
-block.prog-mats-airburst.description = Fires bursts of homing missiles at enemies.
-block.prog-mats-vulcan.name = Vulcan
-block.prog-mats-vulcan.description = Fires close-range piercing blasts at nearby enemies and sets them on fire.
-block.prog-mats-lotus.name = Lotus
-block.prog-mats-lotus.description = Fires bursts of homing lances at enemies.
-block.prog-mats-gravity.name = Gravity
-block.prog-mats-gravity.description = Fires up to six tractor beams that pulls in flying enemies, damaging them in the process.
-block.prog-mats-ambrosia.name = Ambrosia
-block.prog-mats-ambrosia.description = Fires healing fields at the closest damaged unit.
-block.prog-mats-dispel.name = Vigilance
-block.prog-mats-dispel.description = Damages and destroys incoming projectiles. Pierces through multiple bullets. Laser projectiles are not targeted.
-### Modules (Large)
-block.prog-mats-rebound.name = Rebound
-block.prog-mats-rebound.description = Fires circular saws at enemies that boomerang back.
-block.prog-mats-rebound.details = Sprite by BlueWolf
-block.prog-mats-trifecta.name = Trifecta
-block.prog-mats-trifecta.description = Fires salvos of three homing rockets at enemies.
-block.prog-mats-ares.name = Ares
-block.prog-mats-ares.description = Fires explosive flame orbs that melt enemies.
-block.prog-mats-jupiter.name = Jupiter
-block.prog-mats-jupiter.description = Fires powerful slow-moving orbs at enemies.
-block.prog-mats-dissonance.name = Dissonance
-block.prog-mats-dissonance.description = Damages and destroys enemy units in a field.
+block.prog-mats-pinpoint.description = Fires a fast-moving single target laser at enemy targets. Swings inaccurately.
+
+## Pixel
+block.prog-mats-bit.name = [pink]Pixel
+block.prog-mats-bit.description = Fires glowing cubes that burst on impact.
+
+## Sniper
+block.prog-mats-caliber.name = [#F3E979]Caliber
+block.prog-mats-caliber.description = Fires powerful sniper bolts with chances of critting for extra damage.
+block.prog-mats-caliber.details = Random crits are fair and balanced.
+
+## Tesla
+block.prog-mats-shock.name = [#F3E979]Shock
+block.prog-mats-shock.description = Zaps a few random enemies in range.
+block.prog-mats-spark.name = [#F3E979]Spark
+block.prog-mats-spark.description = Zaps many random enemies in range.
+block.prog-mats-storm.name = [#F3E979]Storm
+block.prog-mats-storm.description = Zaps numerous random enemies in range.
+
+## Nexus
+block.prog-mats-ravage.name = Ravage
+block.prog-mats-ravage.description = [red]WIP[]
+block.prog-mats-onslaught.name = Onslaught
+block.prog-mats-onslaught.description = [red]WIP[]
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-sergeant.name = [gold]Sergeant
@@ -173,9 +139,9 @@ block.prog-mats-incendiary-rocket.description = A [gold]rocket[] used by [gold]a
 
 ## Missile
 block.prog-mats-artemis.name = [red]Artemis
-block.prog-mats-artemis.description = Launches long-range [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
+block.prog-mats-artemis.description = Launches long-range [red]ballistic missiles[] at enemies. Can only target enemies beyond a large minimum distance.
 block.prog-mats-paragon.name = [red]Paragon
-block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
+block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] at enemies. Can only target enemies beyond a large minimum distance.
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
@@ -193,28 +159,18 @@ block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [r
 block.prog-mats-sandbox-nuke.name = Sandbox Nuke
 block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
 
-## Pixel
-block.prog-mats-bit.name = [pink]Pixel
-block.prog-mats-bit.description = Fires glowing cubes that burst on impact.
-
-## Sniper
-block.prog-mats-caliber.name = [#F3E979]Caliber
-block.prog-mats-caliber.description = Fires powerful sniper bolts with chances of critting for extra damage.
-block.prog-mats-caliber.details = Random crits are fair and balanced.
-
-## Tesla
-block.prog-mats-shock.name = [#F3E979]Shock
-block.prog-mats-shock.description = Zaps a few random enemies in range.
-block.prog-mats-spark.name = [#F3E979]Spark
-block.prog-mats-spark.description = Zaps many random enemies in range.
-block.prog-mats-storm.name = [#F3E979]Storm
-block.prog-mats-storm.description = Zaps numerous random enemies in range.
-
-##Apotheosis
-block.prog-mats-apotheosis-nexus.name = [#CE5EE5]Apotheosis Nexus
-block.prog-mats-apotheosis-nexus.description = Fires a devastating laser into the sky that arcs down and decimates an area. Requires extensive cooling to operate.
-block.prog-mats-apotheosis-charger.name = [#CE5EE5]Apotheosis Charge Tower
-block.prog-mats-apotheosis-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it a major boost in power.\nNote: Has diminishing returns.
+## Modular Turret
+block.prog-mats-matrix.name = Matrix
+block.prog-mats-matrix.description = A large modular turret platform.
+block.prog-mats-matrix.details = Sprite by BlueWolf (Adjusted by me when this was moved to Erekir.)
+### Modules (Small)
+block.prog-mats-augment.name = Augment
+block.prog-mats-augment.description = Slowly repairs the platform as well as increases the speed of other modules. Limit of 1 per platform.
+### Modules (Medium)
+### Modules (Large)
+block.prog-mats-firestorm.name = Firestorm
+block.prog-mats-firestorm.description = Launches barrages short-range [red]ballistic missiles[] at enemy targets. Can only target enemies beyond a small minimum distance.
+block.prog-mats-firestorm.details = IT'S BACK!
 
 # Drills
 
@@ -308,6 +264,9 @@ block.prog-mats-multi-void.description = Destroys any items and removes any liqu
 block.prog-mats-multi-source-void.name = Dual Souoid
 block.prog-mats-multi-source-void.description = Infinitely outputs items and liquids [red]and[] destroys any items and removes any liquids.\nSandbox only.
 block.prog-mats-multi-source-void.details = U N L I M I T E D   P O W E R
+block.prog-mats-material-source-void.name = Omega Souoid
+block.prog-mats-material-source-void.description = Infinitely outputs all items and liquids at once [red]and[] destroys any items and removes any liquids.
+block.prog-mats-material-source-void.details = U N L I M I T E D E R  P O W E R
 
 block.prog-mats-infini-mender.name = Configurable Mender
 block.prog-mats-infini-mender.description = Periodically repairs blocks in its vicinity.\nRepair time and range can be configured.\nSandbox only.
