Liquid overflow/underflow
The purpose of this will come clear.

...you know maybe I should split small things like this or the beam diode into its own mod.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,10 +1,10 @@
-# Item
+## Items
 
 item.prog-mats-techtanite.name = Tenelium
 item.prog-mats-techtanite.description = A sythetic element fused from titanium and thorium. Used in advanced electronics.
 item.prog-mats-techtanite.details = Based on the real life element Technetium.
 
-## Liquid
+## Liquids
 liquid.prog-mats-magma.name = Magma
 liquid.prog-mats-magma.description = Actually, it's supposed to be lava since it's on the surface...
 liquid.prog-mats-magma.details = This is unobtainable, and it's only purpose is to be spawned by Eruptor turrets and burn everything.
@@ -186,8 +186,10 @@ block.prog-mats-burst-driver.description = Long-range item transport structure. 
 
 # Liquid
 
-block.prog-mats-force-conduit.name = Force Conveyor
-block.prog-mats-force-conduit.description =
+blocks.prog-mats-reinforced-liquid-overflow-gate.name = Reinforced Liquid Overflow Gate
+blocks.prog-mats-reinforced-liquid-overflow-gate.description = Only outputs liquid to the left and right if the front path is blocked.
+blocks.prog-mats-reinforced-liquid-underflow-gate.name = Reinforced Liquid Underflow Gate
+blocks.prog-mats-reinforced-liquid-underflow-gate.description = Opposite of an overflow gate. Outputs to the front if the left and right paths are blocked.
 
 # Units
 
