--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,15 +1,17 @@
-## Items
+# Items
 
 item.prog-mats-techtanite.name = Tenelium
 item.prog-mats-techtanite.description = A sythetic element fused from titanium and thorium. Used in advanced electronics.
 item.prog-mats-techtanite.details = Based on the real life element Technetium.
 
-## Liquids
+# Liquids
 liquid.prog-mats-magma.name = Magma
 liquid.prog-mats-magma.description = Actually, it's supposed to be lava since it's on the surface...
 liquid.prog-mats-magma.details = This is unobtainable, and it's only purpose is to be spawned by Eruptor turrets and burn everything.
 
-# Production
+# Blocks
+
+## Production
 
 block.prog-mats-mindron-collider.name = Mindron Collider
 block.prog-mats-mindron-collider.description = Sustains a fusion reaction between titanium and thorium to fuse tenelium. Takes some time to reach peak efficiency.
@@ -27,16 +29,16 @@ block.prog-mats-missile-factory.details = Resprite by TheMalaysianDude.
 block.prog-mats-sentry-builder.name = Sentry Factory
 block.prog-mats-sentry-builder.description = Constructs sentry units that can be manually activated or launched.
 
-# Turret
+## Turret
 
-## Eruptor
+### Eruptor
 block.prog-mats-flame.name = [crimson]Flame
 block.prog-mats-flame.description = Opens the ground under ground enemies, releasing lava.
 block.prog-mats-flame.details = Found in the wreakage of impact0078. Believed to have once been used for terraforming the landscape.\n\nResprite by ThirstyBoi.
 block.prog-mats-blaze.name = [crimson]Blaze
 block.prog-mats-blaze.description = Opens the ground under ground enemies, releasing a lot of lava.
 
-## Minigun
+### Minigun
 block.prog-mats-minigun.name = M-I-nigun
 block.prog-mats-minigun.description = Fires a stream of bullets at enemies. Ramps up in speed over time.
 block.prog-mats-miinigun.name = M-II-nigun
@@ -45,40 +47,40 @@ block.prog-mats-mivnigun.name = M-IV-nigun
 block.prog-mats-mivnigun.description = Fires four streams of bullets at enemies. Ramps up in speed over time.
 block.prog-mats-mivnigun.details = No, I will not make a "M-VIII-nigun" or anything more.
 
-## Geomancy
+### Geomancy
 block.prog-mats-concretion.name = Concretion
 block.prog-mats-concretion.description = Causes pillars of explosive rock to form under ground enemies.
 block.prog-mats-igneous-pillar.name = Igneous Pillar
 block.prog-mats-igneous-pillar.description = Explodes after a short delay. Spawned by concretion turrets.\nOnly placeable in sandbox.
 
-## Blackhole
+### Blackhole
 block.prog-mats-blackhole.name = [purple]Kugelblitz
 block.prog-mats-blackhole.description = Fires small black holes that suck in units and bullets.
 block.prog-mats-blackhole.details = Sprite based off of a sprite provided by Goober.
 
-## Popeshadow
+### Popeshadow
 block.prog-mats-excalibur.name = [yellow]Excalibur
 block.prog-mats-excalibur.description = Fires massive cross-shaped lasers.
 block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.\n\nAlso known as [yellow]Popeshadow[].
 
-## Vaccinator
+### Vaccinator
 block.prog-mats-vaccinator.name = [red]Vaccinator
 block.prog-mats-vaccinator.description = Fires syringes that are definitely filled with vaccines and totally not nanomachines.
 block.prog-mats-vaccinator.details = Anti-vaxxers are quivering in fear.
 
-## Signal Flare
+### Signal Flare
 block.prog-mats-signal.name = Allure
 block.prog-mats-signal.description = Fires signal flares that attract the targetting of units, turrets, and homing bullets.\n[lime]More simulated health better attracts max-health-based targetting, such as Foreshadows.
 
-## Magnets
+### Magnets
 block.prog-mats-attraction.name = Attraction
 block.prog-mats-attraction.description = Fires magnets that pull themselves towards enemies.
 
-## Anxiety
+### Anxiety
 block.prog-mats-sentinel.name = [sky]Sentinel
 block.prog-mats-sentinel.description = Fires powerful explosive laser bolts at ground targets over long distances.
 
-## Sword
+### Sword
 block.prog-mats-dance.name = [crimson]Dance
 block.prog-mats-dance.description = Controls flying swords to slice enemies.
 block.prog-mats-dance.details = Sword opacity setting can be found in PM settings.
@@ -88,20 +90,20 @@ block.prog-mats-ball.description = Controls large flying swords to slice enemies
 block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.\nSword sprite by ThirstyBoi.
 unit.prog-mats-ball-sword.name = [crimson]Masquerade Sword
 
-## Laser pointer go brrr
+### Laser pointer go brrr
 block.prog-mats-pinpoint.name = Pinpoint
 block.prog-mats-pinpoint.description = Fires a fast-moving single target laser at enemy targets. Swings inaccurately.
 
-## Pixel
+### Pixel
 block.prog-mats-bit.name = [pink]Pixel
 block.prog-mats-bit.description = Fires glowing cubes that burst on impact.
 
-## Sniper
+### Sniper
 block.prog-mats-caliber.name = [#F3E979]Caliber
 block.prog-mats-caliber.description = Fires powerful sniper bolts with chances of critting for extra damage.
 block.prog-mats-caliber.details = Random crits are fair and balanced.
 
-## Tesla
+### Tesla
 block.prog-mats-shock.name = [#F3E979]Shock
 block.prog-mats-shock.description = Zaps a few random enemies in range.
 block.prog-mats-spark.name = [#F3E979]Spark
@@ -109,27 +111,27 @@ block.prog-mats-spark.description = Zaps many random enemies in range.
 block.prog-mats-storm.name = [#F3E979]Storm
 block.prog-mats-storm.description = Zaps numerous random enemies in range.
 
-## Nexus
+### Nexus
 block.prog-mats-ravage.name = Ravage
 block.prog-mats-ravage.description = [red]WIP[]
 block.prog-mats-onslaught.name = Onslaught
 block.prog-mats-onslaught.description = [red]WIP[]
 
-## bUiLdIn A sEnTrY
+### bUiLdIn A sEnTrY
 block.prog-mats-sergeant.name = [gold]Sergeant
 block.prog-mats-sergeant.description = Launches strong sentry units that expire after a duration.
 block.prog-mats-sergeant.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
-### Ammo payloads
+#### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
 block.prog-mats-basic-sentry.description = A rapid fire sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 block.prog-mats-missile-sentry.name = Missile Sentry
 block.prog-mats-missile-sentry.description = A missile-launching sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 
-## Rocket
+### Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
 block.prog-mats-arbalest.description = Fires extremely fast [gold]rockets[] at enemies.
 block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from the ancient past known as v5?
-### Rockets
+#### Rockets
 block.prog-mats-empty-rocket.name = Rocket Shell
 block.prog-mats-empty-rocket.description = An empty rocket shell.
 block.prog-mats-basic-rocket.name = Basic Rocket
@@ -137,12 +139,12 @@ block.prog-mats-basic-rocket.description = A [gold]rocket[] used by [gold]arbale
 block.prog-mats-incendiary-rocket.name = Incendiary Rocket
 block.prog-mats-incendiary-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage and causing fire.
 
-## Missile
+### Missile
 block.prog-mats-artemis.name = [red]Artemis
 block.prog-mats-artemis.description = Launches long-range [red]ballistic missiles[] at enemies. Can only target enemies beyond a large minimum distance.
 block.prog-mats-paragon.name = [red]Paragon
 block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] at enemies. Can only target enemies beyond a large minimum distance.
-### Missiles
+#### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
 block.prog-mats-basic-missile.name = Basic Missile
@@ -159,37 +161,30 @@ block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [r
 block.prog-mats-sandbox-nuke.name = Sandbox Nuke
 block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
 
-## Modular Turret
+### Modular Turret
 block.prog-mats-matrix.name = Matrix
 block.prog-mats-matrix.description = A large modular turret platform.
 block.prog-mats-matrix.details = Sprite by BlueWolf (Adjusted by me when this was moved to Erekir.)
-### Modules (Small)
+#### Modules (Small)
 block.prog-mats-augment.name = Augment
 block.prog-mats-augment.description = Slowly repairs the platform as well as increases the speed of other modules. Limit of 1 per platform.
-### Modules (Medium)
-### Modules (Large)
+#### Modules (Medium)
+#### Modules (Large)
 block.prog-mats-firestorm.name = Firestorm
 block.prog-mats-firestorm.description = Launches barrages short-range [red]ballistic missiles[] at enemy targets. Can only target enemies beyond a small minimum distance.
 block.prog-mats-firestorm.details = IT'S BACK!
 
-# Drills
+## Drills
 
 block.prog-mats-smart-drill.name = Smart Drill
 block.prog-mats-smart-drill.description = A fast drill. What it mines can be selected. Requires power.
 
-# Distribution
+## Distribution
 
 block.prog-mats-floating-conveyor.name = Hydroconveyor
 block.prog-mats-floating-conveyor.description = Transports items forward. Slightly faster than a standard conveyor. Can be placed in deep liquids.
 block.prog-mats-burst-driver.name = Burst Driver
 block.prog-mats-burst-driver.description = Long-range item transport structure. Fires massive long bursts of items to other burst drivers.\nSingular items are lighter than a large amount bunched together, so it's range and speed are faster than mass drivers.
-
-# Liquid
-
-blocks.prog-mats-reinforced-liquid-overflow-gate.name = Reinforced Liquid Overflow Gate
-blocks.prog-mats-reinforced-liquid-overflow-gate.description = Only outputs liquid to the left and right if the front path is blocked.
-blocks.prog-mats-reinforced-liquid-underflow-gate.name = Reinforced Liquid Underflow Gate
-blocks.prog-mats-reinforced-liquid-underflow-gate.description = Opposite of an overflow gate. Outputs to the front if the left and right paths are blocked.
 
 # Units
 
