Make sandbox block health boost a setting
+ Make it a multiplier instead of a flat value

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -409,6 +409,8 @@ setting.pm-zone-opacity.name = Zone Opacity
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
 setting.pm-sandbox-settings.name = Sandbox Settings
 setting.pm-strobespeed.name = Sandbox Block Strobe Speed
+setting.pm-sandbox-health.name = Buff sandbox block health
+setting.pm-sandbox-health.description = Restart required to apply changes.
 setting.pm-sandbox-everything.name = Enable sandbox turret "Chaos" and sandbox unit "Death"
 setting.pm-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
 setting.pm-other-settings.name = Other Settings
