--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -112,10 +112,10 @@ block.prog-mats-storm.name = [#F3E979]Storm
 block.prog-mats-storm.description = Zaps numerous random enemies in range.
 
 ### Nexus
-block.prog-mats-ravage.name = Ravage
-block.prog-mats-ravage.description = [red]WIP[]
-block.prog-mats-onslaught.name = Onslaught
-block.prog-mats-onslaught.description = [red]WIP[]
+block.prog-mats-solstice.name = Solstice
+block.prog-mats-solstice.description = [red]WIP[]
+block.prog-mats-starfall.name = Starfall
+block.prog-mats-starfall.description = [red]WIP[]
 
 ### bUiLdIn A sEnTrY
 block.prog-mats-sergeant.name = [gold]Sergeant
