--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -239,9 +239,9 @@ block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
 block.prog-mats-rainbow-power-boost.description = Like the rainbow power source, but everything in its power system gets boosted.\nSandbox only.
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
-block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
+block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing. Armor can be configured.\nSandbox only.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
-block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
+block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing. Armor can be configured.\nSandbox only.
 
 block.prog-mats-infini-heater.name = Configurable Heat Source
 block.prog-mats-infini-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
