Full stat customization on sandbox walls.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -239,9 +239,9 @@ block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
 block.prog-mats-rainbow-power-boost.description = Like the rainbow power source, but everything in its power system gets boosted.\nSandbox only.
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
-block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing. Armor can be configured.\nSandbox only.
+block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Numerous functionalities can be configured.\nSandbox only.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
-block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing. Armor can be configured.\nSandbox only.
+block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Numerous functionalities can be configured.\nSandbox only.
 
 block.prog-mats-infini-heater.name = Configurable Heat Source
 block.prog-mats-infini-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
@@ -373,11 +373,6 @@ pm-everything = Everything
 
 pm-requires = Requires:
 
-pm-apotheosis-chargers = Chargers: {0}
-pm-apotheosis-none = No chargers connected
-pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
-pm-apotheosis-falloff-notice = [lightgray](Each charger connected boosts less)
-
 pm-swap.title = Swap Modules
 pm-pickup.label = Pick Up Module
 pm-pickup.invalid = [red]Not a payload unit!
@@ -395,10 +390,14 @@ pm-size.large.short = L
 pm-size.large.full = Large
 pm-size.large.amount = [accent]Large Mounts: [lightgray]{0}
 
-pm-sandbox-wall-mode.sparking = Sparking
-pm-sandbox-wall-mode.reflecting = Reflecting
-pm-sandbox-wall-mode.insulating = Insulation
-pm-sandbox-wall-mode.DPS-testing = DPS Testing
+pm-sandbox-wall.mode-lightning = Lightning
+pm-sandbox-wall.lightning.chance = Chance
+pm-sandbox-wall.lightning.damage = Damage
+pm-sandbox-wall.lightning.length = Length
+pm-sandbox-wall.mode-deflection = Deflection
+pm-sandbox-wall.deflection.chance = Base Chance
+pm-sandbox-wall.mode-insulation = Insulation
+pm-sandbox-wall.mode-dpstesting = DPS Testing
 
 ## Settings
 
