--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -491,6 +491,8 @@ mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler res
 mod.prog-mats-contributor.6 = [#FCC21B]Memedustry[] (Incision sprite)
 mod.prog-mats-contributor.7 = [#FCC21B]BlueWolf[] (Modular Turret bases and Rebound sprites)
 mod.prog-mats-contributor.8 = [#FCC21B]lordReddx[] (RU Translation)
-mod.prog-mats-contributor.9 = Some sounds from [#FCC21B]Freesound[].
-mod.prog-mats-contributor.10 = Anyone I stole code from.
+mod.prog-mats-contributor.9 = [#FCC21B]xStaBUx[] (Ukrainian translation)
+mod.prog-mats-contributor.10 = [#FCC21B]Prosta4ok_ua[] (Ukrainian translation proofreading)
+mod.prog-mats-contributor.11 = Some sounds from [#FCC21B]Freesound[].
+mod.prog-mats-contributor.12 = Anyone I stole code from.
 mod.prog-mats.description = This mod is mostly just turrets. It's just me having fun with what I can create with the power of Java.
