Tech tree update

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -17,6 +17,8 @@ block.prog-mats-mindron-collider.name = Mindron Collider
 block.prog-mats-mindron-collider.description = Sustains a fusion reaction between titanium and thorium to fuse tenelium. Takes some time to reach peak efficiency.
 block.prog-mats-forge.name = Pyroclast Forge
 block.prog-mats-forge.description = Smelts massive batches of sand, lead, and coal into silicon and metaglass, using pyratite as an additional fuel source. Less fuel is used in hot locations.
+block.prog-mats-tenelium-fuser.name = Tenelium Fuser
+block.prog-mats-tenelium-fuser.description = Fuses thorium and metals in slag into tenelium. Requires a large amount of heat.
 block.prog-mats-module-assembler.name = Module Assembler
 block.prog-mats-module-assembler.description = Constructs modules to be used by modular turret bases.
 block.prog-mats-module-foundry.name = Module Foundry
