--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -137,9 +137,9 @@ block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod fro
 block.prog-mats-empty-rocket.name = Rocket Shell
 block.prog-mats-empty-rocket.description = An empty rocket shell.
 block.prog-mats-basic-rocket.name = Basic Rocket
-block.prog-mats-basic-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage.
+block.prog-mats-basic-rocket.description = An explosive [gold]rocket[]. Fast moving, explodes on hit, dealing a lot of damage.
 block.prog-mats-incendiary-rocket.name = Incendiary Rocket
-block.prog-mats-incendiary-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage and causing fire.
+block.prog-mats-incendiary-rocket.description = An explosive [gold]rocket[]. Fast moving, explodes on hit, dealing a lot of damage and causing fire.
 
 ### Missile
 block.prog-mats-artemis.name = [red]Artemis
@@ -150,18 +150,18 @@ block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
 block.prog-mats-basic-missile.name = Basic Missile
-block.prog-mats-basic-missile.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Explodes on impact, dealing a lot of splash damage.
+block.prog-mats-basic-missile.description = A [red]ballistic missile[]. Explodes on impact, dealing a lot of splash damage.
 block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Splits twice in flight, creating multiple impacts that deal splash damage.
+block.prog-mats-recursive-missile.description = A [red]ballistic missile[]. Splits twice in flight, creating multiple impacts that deal splash damage.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear [red]ballistic missile[] shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
-block.prog-mats-basic-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on impact, dealing a ton of splash damage.
+block.prog-mats-basic-nuke.description = A [red]ballistic missile[]. Explodes on impact, dealing a ton of splash damage.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage. Slightly homes in on targets.
+block.prog-mats-cluster-nuke.description = A [red]ballistic missile[]. Splits in flight, creating multiple impacts that deal a lot of splash damage. Slightly homes in on targets.
 block.prog-mats-sandbox-nuke.name = Sandbox Nuke
-block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
+block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[]. Here comes the [red]B I G   B O O M[].\nSandbox only.\n[red]Slight lag warning.
 
 ### Modular Turret
 block.prog-mats-matrix.name = Matrix
@@ -344,6 +344,8 @@ stat.pm-fuel.affinity = [stat]Affinities:
 
 stat.pm-mounts = [lightgray]Mounts
 
+stat.pm-used = [lightgray]Used By
+
 bullet.pm-crit-chance = [stat]{0}%[lightgray] crit chance
 bullet.pm-crit-multiplier = [stat]{0}x[lightgray] crit damage multiplier
 bullet.pm-bouncing = [stat]bouncing
@@ -423,7 +425,7 @@ setting.pm-farting.description = Restart required to apply changes.
 mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]
 mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (Eruptor sprite + Masquerade sword)
 mod.prog-mats-contributor.1 = [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)
-mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (Missile turret sprites, new icon)
+mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (Previous missile turret sprites, new icon)
 mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (Luminocity damage ramping)
 mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Sergeant sprites)
 mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
