Bombing missile sprites
+ Bundles
+ Slight stat adjustments

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -137,9 +137,11 @@ block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod fro
 block.prog-mats-empty-rocket.name = Rocket Shell
 block.prog-mats-empty-rocket.description = An empty rocket shell.
 block.prog-mats-basic-rocket.name = Basic Rocket
-block.prog-mats-basic-rocket.description = An explosive [gold]rocket[]. Fast moving, explodes on hit, dealing a lot of damage.
+block.prog-mats-basic-rocket.description = An explosive [gold]rocket[]. Explodes on hit, dealing a lot of damage.
 block.prog-mats-incendiary-rocket.name = Incendiary Rocket
-block.prog-mats-incendiary-rocket.description = An explosive [gold]rocket[]. Fast moving, explodes on hit, dealing a lot of damage and causing fire.
+block.prog-mats-incendiary-rocket.description = An explosive [gold]rocket[]. Explodes on hit, dealing a lot of damage and causing fire.
+block.prog-mats-splitter-rocket.name = Splitter Rocket
+block.prog-mats-splitter-rocket.description = An explosive [gold]rocket[]. Explodes on hit, dealing damage and firing off smaller rockets.
 
 ### Missile
 block.prog-mats-artemis.name = [red]Artemis
@@ -153,6 +155,8 @@ block.prog-mats-basic-missile.name = Basic Missile
 block.prog-mats-basic-missile.description = A [red]ballistic missile[]. Explodes on impact, dealing a lot of splash damage.
 block.prog-mats-recursive-missile.name = Recursive Missile
 block.prog-mats-recursive-missile.description = A [red]ballistic missile[]. Splits twice in flight, creating multiple impacts that deal splash damage.
+block.prog-mats-bombing-missile.name = Bombing Missile
+block.prog-mats-bombing-missile.description = A [red]ballistic missile[]. Drops bombs as it flies, raining explosions along its path. Explodes on impact, dealing splash damage.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear [red]ballistic missile[] shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
