https://github.com/Anuken/Mindustry/pull/8366

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -350,6 +350,9 @@ stat.pm-mounts = [lightgray]Mounts
 
 stat.pm-used = [lightgray]Used By
 
+#Remove this entry after my pr gets merged
+bullet.interval = [stat]{0}/sec[lightgray] interval bullets:
+
 bullet.pm-crit-chance = [stat]{0}%[lightgray] crit chance
 bullet.pm-crit-multiplier = [stat]{0}x[lightgray] crit damage multiplier
 bullet.pm-bouncing = [stat]bouncing
