A real JEI moment

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -348,6 +348,7 @@ stat.pm-fuel.affinity = [stat]Affinities:
 
 stat.pm-mounts = [lightgray]Mounts
 
+stat.pm-producer = [lightgray]Produced By
 stat.pm-used = [lightgray]Used By
 
 #Remove this entry after my pr gets merged
