--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -203,6 +203,10 @@ block.prog-mats-strength-emitter.description = Boosts the damage of all units in
 
 # Effect
 
+block.prog-mats-core-cripple.name = Core: Shatter
+block.prog-mats-core-cripple.description = Core of the base. Once destroyed, the sector is lost.\nExtremely cheap to produce, doesn't carry much fuel for its thrusters.
+block.prog-mats-core-cripple.details = ...what do you mean we don't have enough fue-
+
 block.prog-mats-core-covalence.name = Core: Covalence
 block.prog-mats-core-covalence.description = Not an actual core, but rather a link for teleporting items to and from the core of the base. Does not add core storage capacity.\nRequires large amounts of power to run.
 
