Splitter rocket sprites

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -204,7 +204,7 @@ block.prog-mats-strength-emitter.description = Boosts the damage of all units in
 # Effect
 
 block.prog-mats-core-cripple.name = Core: Shatter
-block.prog-mats-core-cripple.description = Core of the base. Once destroyed, the sector is lost.\nExtremely cheap to produce, doesn't carry much fuel for its thrusters.
+block.prog-mats-core-cripple.description = Core of the base. Once destroyed, the sector is lost.\nSmall and extremely cheap to produce. Doesn't provide any other advantages.
 block.prog-mats-core-cripple.details = ...what do you mean we don't have enough fue-
 
 block.prog-mats-core-covalence.name = Core: Covalence
