Target Dummy Sprites/Bundles

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -252,6 +252,8 @@ block.prog-mats-sandbox-wall.name = Sandbox Wall
 block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Numerous functionalities can be configured.\nSandbox only.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
 block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Numerous functionalities can be configured.\nSandbox only.
+block.prog-mats-target-dummy-base.name = Target Dummy
+block.prog-mats-target-dummy-base.description = Spawns a target dummy to test dps. Armor and flight can be configured.\nSandbox only.
 
 block.prog-mats-infini-heater.name = Configurable Heat Source
 block.prog-mats-infini-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
@@ -301,6 +303,8 @@ unit.prog-mats-large-flare.details = Unobtainable. Only spawned by allures.
 unit.prog-mats-god.name = Flarogus
 unit.prog-mats-god.description = Every weapon and abillity has been enherited by this unit. Doom approaches.\nSandbox only.
 unit.prog-mats-god.details = sus
+unit.prog-mats-dummy.name = Test Dummy
+unit.prog-mats-dummy.description = A target dummy made to be beaten up.\nSandbox only.\n[gray]Definitely does not house a conscience and is planning to kill you for everything you do to it.
 
 
 ## Status Effects
