--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -303,8 +303,9 @@ unit.prog-mats-large-flare.details = Unobtainable. Only spawned by allures.
 unit.prog-mats-god.name = Flarogus
 unit.prog-mats-god.description = Every weapon and abillity has been enherited by this unit. Doom approaches.\nSandbox only.
 unit.prog-mats-god.details = sus
-unit.prog-mats-dummy.name = Test Dummy
-unit.prog-mats-dummy.description = A target dummy made to be beaten up.\nSandbox only.\n[gray]Definitely does not house a conscience and is planning to kill you for everything you do to it.
+unit.prog-mats-dummy.name = Buster
+unit.prog-mats-dummy.description = A target dummy made to be beaten up.\nSandbox only.
+unit.prog-mats-dummy.details = [darkgray]Definitely does not house a conscience and is planning to kill you for everything you do to it.
 
 
 ## Status Effects
