--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -365,6 +365,7 @@ stat.pm-used = [lightgray]Used By
 
 #Remove this entry after my pr gets merged
 bullet.interval = [stat]{0}/sec[lightgray] interval bullets:
+bullet.suppression = [stat]repair suppression[lightgray] ~ [stat]{0}[lightgray] seconds
 
 bullet.pm-crit-chance = [stat]{0}%[lightgray] crit chance
 bullet.pm-crit-multiplier = [stat]{0}x[lightgray] crit damage multiplier
@@ -377,6 +378,8 @@ bullet.pm-flare-lifetime = [stat]{0}[lightgray] second lifetime
 bullet.pm-suction-radius = [stat]{0}[lightgray] tile suction radius
 
 bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[lightgray] tiles
+
+bullet.pm-sparking = [stat]{0}/sec[lightgray] electrocution pulses
 
 ### The extra space is intentional
 bullet.pm-sentry-spawn = [lightgray]Spawns 
