--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -163,9 +163,11 @@ block.prog-mats-basic-nuke.name = Basic Nuke
 block.prog-mats-basic-nuke.description = A [red]ballistic missile[]. Explodes on impact, dealing a ton of splash damage.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = A [red]ballistic missile[]. Splits in flight, creating multiple impacts that deal a lot of splash damage. Slightly homes in on targets.
+block.prog-mats-cluster-nuke.description = A [red]ballistic missile[]. Splits in flight, creating numerous impacts over a wide area that deal a lot of splash damage. Slightly homes in on targets.
+block.prog-mats-emp-nuke.name = EMP Nuke 
+block.prog-mats-emp-nuke.description = A [red]ballistic missile[]. Releases energy orbs which electricity units, significantly damage enemy power networks, and suppress enemy structure repair blocks.
 block.prog-mats-sandbox-nuke.name = Sandbox Nuke
-block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[]. Here comes the [red]B I G   B O O M[].\nSandbox only.\n[red]Slight lag warning.
+block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[]. Here comes the [red]B I G   B O O M[]!\nSandbox only.\n[red]Slight lag warning.
 
 ### Modular Turret
 block.prog-mats-matrix.name = Matrix
@@ -311,6 +313,7 @@ unit.prog-mats-dummy.details = [darkgray]Definitely does not house a conscience 
 ## Status Effects
 
 status.prog-mats-incend-burn.name = Incendiary Burn
+status.prog-mats-emp-stun.name = EMP Stun
 status.prog-mats-frenzy.name = Frenzy
 status.prog-mats-disassembly.name = Disassembly
 status.prog-mats-weaken.name = Weakened
