Info on what they're used to produce
+ Better missing research display

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -346,9 +346,6 @@ stat.pm-sentry-lifetime = [lightgray]Lifetime
 
 stat.pm-static-power = {0} power units/second per link
 
-stat.pm-recipes = [lightgray]Recipes
-stat.pm-multi-recipe = [accent]Recipe {0}:
-
 stat.pm-point-defence-pierce = {0}x pierce
 
 stat.pm-fuel = [lightgray]Fuel
@@ -360,7 +357,9 @@ stat.pm-fuel.affinity = [stat]Affinities:
 
 stat.pm-mounts = [lightgray]Mounts
 
+stat.pm-recipes = [lightgray]Recipes
 stat.pm-producer = [lightgray]Produced By
+stat.pm-produce = [lightgray]Used To Produce
 stat.pm-used = [lightgray]Used By
 
 #Remove this entry after my pr gets merged
@@ -392,7 +391,7 @@ bullet.pm-target = [lightgray]To target:
 
 ##Block-specific Info
 
-pm-missing-research = [red]<Research Missing>
+pm-missing-research = [darkgray]<Research Required>
 pm-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
 pm-infinity = Infinity
 pm-infinite-damage = Infinite damage
