Cleanup stat bundles
+ Fix custom stat catagorization

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -341,26 +341,23 @@ bar.pm-fuel-use = Fuel per craft: {0}
 
 bar.pm-craft-speed = Craft Speed: {0}%
 
-stat.pm-sentry = [lightgray]Sentry
+stat.pm-mounts = Mounts
+
+stat.pm-sentry = Sentry
 stat.pm-sentry-lifetime = [lightgray]Lifetime
 
-stat.pm-static-power = {0} power units/second per link
-
-stat.pm-point-defence-pierce = {0}x pierce
-
-stat.pm-fuel = [lightgray]Fuel
+stat.pm-fuel = Fuel
 stat.pm-fuel.input = [stat]{0}[lightgray] added per item
 stat.pm-fuel.use = [stat]{0}[lightgray] used per craft
 stat.pm-fuel.capacity = [stat]{0}[lightgray] capacity
 ### The extra space is intentional
 stat.pm-fuel.affinity = [stat]Affinities: 
 
-stat.pm-mounts = [lightgray]Mounts
 
-stat.pm-recipes = [lightgray]Recipes
-stat.pm-producer = [lightgray]Produced By
-stat.pm-produce = [lightgray]Used To Produce
-stat.pm-used = [lightgray]Used By
+stat.pm-recipes = Recipes
+stat.pm-producer = Produced By
+stat.pm-produce = Used To Produce
+stat.pm-used = Used By
 
 #Remove this entry after my pr gets merged
 bullet.interval = [stat]{0}/sec[lightgray] interval bullets:
