Cleaner target dummy config
Make it similar to sandbox wall configuration.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -422,6 +422,8 @@ pm-sandbox-wall.deflection.chance = Base Chance
 pm-sandbox-wall.mode-insulation = Insulation
 pm-sandbox-wall.mode-dpstesting = DPS Testing
 
+pm-target-dummy.enemy = Enemy Team
+
 ## Settings
 
 setting.pm-title = Progression Ministry
