Missile sentry resprite
Also rename because "downpour" doesn't sound right.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -289,7 +289,7 @@ block.prog-mats-infini-overdrive.description = Increases the speed of nearby bui
 
 unit.prog-mats-barrage.name = Barrage
 unit.prog-mats-barrage.description = Barrages enemies with homing shots. Does not move. Expires after a short lifetime.
-unit.prog-mats-downpour.name = Downpour
+unit.prog-mats-downpour.name = Strikedown
 unit.prog-mats-downpour.description = Fire smalls homing missiles at enemies. Does not move. Expires after a short lifetime.
 
 unit.prog-mats-small-flare.name = Small Signal Flare
