Apply to everything else as well

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -361,7 +361,7 @@ stat.pm-used = Used By
 
 #Remove this entry after my pr gets merged
 bullet.interval = [stat]{0}/sec[lightgray] interval bullets:
-bullet.suppression = [stat]{0} sec[lightgray] repair suppression ~ [stat]{1}[lightgray] tiles
+bullet.suppression = [stat]{0}[lightgray] seconds of repair suppression ~ [stat]{1}[lightgray] tiles
 
 bullet.pm-crit-chance = [stat]{0}%[lightgray] crit chance
 bullet.pm-crit-multiplier = [stat]{0}x[lightgray] crit damage multiplier
